# crystalstructureGPT

./: .gitignore  model.py  pyproject.toml  sample.py  sample_slices.py  train.py  vocab.py
data/cst/: add_structure_tokens.py  explore.py  prepare.py
data/slice/: prepare.py
experiments/: bench.py  evaluate_structures.py  sample.py  train.sbatch
src/nanogpt/: __init__.py  bench.py  constraints.py  evaluate_structures.py  model.py  sample.py  train.py  vocab.py
